# aki-unbody

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  TODO.md
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
docs/: review.2.md
docs/reviews/: 2026-05-20_code_review.1.md  2026-06-01_code_review.3.md
fixtures/: sample-text.txt  sherlock.txt
specs/: 0.requirements.md  1.acceptance-criteria.md  2.design.md  3.tasks.md
src/: lib.rs  main.rs  run.rs
src/conf/: cmd.help.rs.txt  cmd.match.rs.txt  mod.rs  parse.rs
src/util/: mod.rs  opt_uc_x_param.rs
tests/: debug.rs  helper.rs  test.rs  test_e.rs  test_l.rs  test_s.rs
xtask/src/: aki-unbody-cmd.txt  cmd.txt  gen_src_cmd.rs
