[package]
name = "aki-unbody"
version = "0.1.7"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
output first or last n lines, like a head and tail of linux command.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-unbody"

[lib]
name = "libaki_unbody"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-unbody"
path = "src/main.rs"

[features]
default = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"

[dev-dependencies]

[build-dependencies]
rustc_version = "0.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = []
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program output first or last n lines, like a head and tail of linux command.
"""
depends = "$auto"
assets = [
    ["target/release/aki-unbody", "usr/bin/aki-unbody", "755"],
]
