[package]
name = "aki-unbody"
version = "0.1.18"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
output first or last n lines, like a head and tail of linux command.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.56.0"
repository = "https://github.com/aki-akaguma/aki-unbody"

[lib]
name = "libaki_unbody"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-unbody"
path = "src/main.rs"

[features]
default = []
debian_build = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"
memx-cdy = "0.1"

[dev-dependencies]
indoc = "1.0"
exec-target = "0.2"

[build-dependencies]
rust-version-info-file = "0.1"
rustc_version = "0.4"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
This program output first or last n lines, like a head and tail of linux command.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-unbody", "usr/bin/aki-unbody", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-unbody/", "644"],
    ["README.md", "usr/share/doc/aki-unbody/", "644"],
]
